--- a/index.html
+++ b/index.html
@@ -176,23 +176,29 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:00 </td> <td>Coffee and set up</td> </tr>
+      <tr> <td>09:15</td> <td>Introduction</td> </tr>
+      <tr> <td>09:30</td>  <td>Automating tasks with the Unix shell - advanced</td> </tr>
+      <tr> <td>11:00</td> <td>Coffee</td> </tr>
+      <tr> <td>11:15</td> <td>Version control with Git</td> </tr>
+      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:30</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>14:45</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00</td>  <td>Working with GitHub</td> </tr>
+      <tr> <td>16:00</td>  <td>Introduction to R and RStudio</td></tr>
+      <tr> <td>17:00</td>  <td>Wrap-up</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
+      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:15</td>  <td>Code testing</td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
