--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <li><a href="{{site.swc_pages}}/git-novice/reference/">Reference...</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
@@ -329,6 +330,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference/">Reference...</a></li>
     </ul>
   </div>
+  -->
 </div>
 
 <hr/>
@@ -692,7 +694,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   </div>
 </div> <!-- End of 'R' section. -->
 
-<div id="sql"> <!-- Start of 'SQLite' section. -->
+<!--
+<div id="sql"> 
   <h3>SQLite</h3>
 
   <p>
@@ -727,7 +730,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
-</div> <!-- End of 'SQLite' section. -->
+</div> 
+-->
 
 <!--
   Uncomment this section if you are using our virtual machine.
