--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ humantime: "9:00 am - 5:00 pm"    # human-readable times for the workshop (e.g.,
 startdate: 2016-10-05      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2016-10-06        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Raniere Silva", "Andrew Warry"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["FIXME"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: "a.nenadic@manchester.ac.uk"      # contact email address for host, lead instructor, or whoever else is handling questions
+helper: ["To be announced"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["a.nenadic@manchester.ac.uk", "richard.emes@nottingham.ac.uk"]      # contact email addresses for host, lead instructor, or whoever else is handling questions
 etherpad:             # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
@@ -137,10 +137,9 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <p>
   Materials will be provided in advance of the workshop and
   large-print handouts are available if needed by notifying the
-  organizers in advance.  If we can help making learning easier for
+  organizers in advance. If we can help making learning easier for
   you (e.g. sign-language interpreters, lactation facilities) please
-  <a href="mailto:{{page.contact}}">get in touch</a> and we will
-  attempt to provide them.
+  get in touch and we will attempt to provide them.
 </p>
 
 <!--
@@ -150,9 +149,23 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 <p id="contact">
   <strong>Contact</strong>:
-  Please mail
-  <a href="mailto:{{page.contact}}">{{page.contact}}</a> for more
-  information.
+  Please email
+  {% if page.contact %}
+      {% for contact in page.contact: %}
+        {% if forloop.last and page.contact.size > 1 %}
+          or
+        {% else %}
+          {% unless forloop.first %}
+            ,
+          {% endunless %}
+        {% endif %}
+        <a href='mailto:{{contact}}'>{{contact}} </a>
+      {% endfor %}
+  {% else %}
+    to-be-announced
+  {% endif %}
+  <!--<a href="mailto:{{page.contact}}">{{page.contact}}</a>-->
+  for more information.
 </p>
 
 <hr/>
@@ -275,14 +288,15 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   </div> 
   -->
   <div class="col-md-6">
-    <h3 id="syllabus-r">Programming in R</h3>
+    <h3 id="syllabus-r">R for Reproducible Scientific Analysis</h3>
     <ul>
-      <li>Working with vectors and data frames</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Using R from the command line</li>
-      <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference/">Reference...</a></li>
+      <li>Introduction to R and RStudio</li>
+      <li>Data Structures</li>
+      <li>Exploring Data Frames</li>
+      <li>Split-Apply-Combine</li>
+      <li>Dataframe Manipulation with dplyr</li>
+      <li>Dataframe Manipulation with tidyr</li>
+      <li><a href="{{site.swc_pages}}/r-novice-gapminder/reference/">Reference...</a></li>
     </ul>
   </div>
   <!--
