--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <hr/>
 
 <!--
+  SPONSORS, SUPPORTERS
+  -->
+<h2 id="general">Sponsors and supporters</h2>
+<div class="row">
+  <div class="col-md-6">
+    <p>
+      This workshop has been sponsored and supported by:
+    </p>
+    <img style="max-height: 50px;" src="https://www.elixir-europe.org/system/files/styles/medium/private/250-elixir_uk_node_logo.png?itok=KIeak5bi" alt="ELIXIR-UK"/>
+    <img style="max-height: 50px;" src="https://www.software.ac.uk/themes/ssi/ssi_logo_with_name-small2.png" alt="SSI"/>
+  </div>
+</div>
+
+<hr/>
+
+<!--
   SCHEDULE
 
   Show the workshop's schedule.  Edit the items and times in the table
