--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ instructor: ["Raniere Silva", "Andrew Warry"] # boxed, comma-separated list of i
 helper: ["To be announced"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["a.nenadic@manchester.ac.uk", "richard.emes@nottingham.ac.uk"]      # contact email addresses for host, lead instructor, or whoever else is handling questions
 etherpad: "http://pad.software-carpentry.org/2016-10-05-nottingham"            # optional: URL for the workshop Etherpad if there is one
-eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
+eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
