Fix Liquid syntax error
Expected end_of_string but found colon
 in "contact in page.contact:" in index.html.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
   <strong>Contact</strong>:
   Please email
   {% if page.contact %}
-      {% for contact in page.contact: %}
+      {% for contact in page.contact %}
         {% if forloop.last and page.contact.size > 1 %}
           or
         {% else %}
