--- a/index.html
+++ b/index.html
@@ -198,11 +198,15 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
   -->
 <h2 id="general">Sponsors and supporters</h2>
 <div class="row">
-  <div class="col-md-6">
-    <p>
-      This workshop has been sponsored and supported by:
-    </p>
+    <div class="col-md-12">
+      <p>
+        This workshop has been sponsored and supported by:
+      </p>
+    </div>
+  <div class="col-md-3">
     <img style="max-height: 50px;" src="https://www.elixir-europe.org/system/files/styles/medium/private/250-elixir_uk_node_logo.png?itok=KIeak5bi" alt="ELIXIR-UK"/>
+  </div>
+    <div class="col-md-3">
     <img style="max-height: 50px;" src="https://www.software.ac.uk/themes/ssi/ssi_logo_with_name-small2.png" alt="SSI"/>
   </div>
 </div>
