--- a/index.html
+++ b/index.html
@@ -234,29 +234,29 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00 </td> <td>Coffee and set up</td> </tr>
-      <tr> <td>09:15</td> <td>Introduction</td> </tr>
-      <tr> <td>09:30</td>  <td>Automating tasks with the Unix shell - advanced</td> </tr>
-      <tr> <td>11:00</td> <td>Coffee</td> </tr>
-      <tr> <td>11:15</td> <td>Version control with Git</td> </tr>
-      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>14:45</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:00</td>  <td>Working with GitHub</td> </tr>
-      <tr> <td>16:00</td>  <td>Introduction to R and RStudio</td></tr>
-      <tr> <td>17:00</td>  <td>Wrap-up</td></tr>
+      <tr> <td>09:00--09:15</td> <td>Coffee and set up</td> </tr>
+      <tr> <td>09:15--09:30</td> <td>Introduction</td> </tr>
+      <tr> <td>09:30--11:00</td>  <td>Automating tasks with the Unix shell - advanced</td> </tr>
+      <tr> <td>11:00--11:15</td> <td>Coffee</td> </tr>
+      <tr> <td>11:15--12:30</td> <td>Version control with Git</td> </tr>
+      <tr> <td>12:30--13:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:30--14:45</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>14:45--15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00--16:00</td>  <td>Working with GitHub</td> </tr>
+      <tr> <td>16:00--17:00</td>  <td>Introduction to R and RStudio</td></tr>
+      <tr> <td>17:00--18:00</td>  <td>Wrap-up</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
-      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:15</td>  <td>Code testing</td> </tr>
-      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:00--10:30</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
+      <tr> <td>10:30--12:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>12:00--13:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:00--15:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
+      <tr> <td>15:00--15:15</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:15--16:30</td>  <td>Code testing</td> </tr>
+      <tr> <td>16:30--17:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
