Uncommented surveys. Removed some paragraphs to reduce the space used.

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
   help one another and to apply what they have learned to their own
   research problems.
 </p>
-<p align="center">
-  <em>
-    For more information on what we teach and why,
-    please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
-  </em>
-</p>
+<!--<p align="center">-->
+  <!--<em>-->
+    <!--For more information on what we teach and why,-->
+    <!--please see our paper-->
+    <!--"<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".-->
+  <!--</em>-->
+<!--</p>-->
 
 <!--
   AUDIENCE
@@ -125,22 +125,22 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
   Modify the block below if there are any barriers to accessibility or
   special instructions.
 -->
-<p id="accessibility">
-  <strong>Accessibility:</strong> We are committed to making this workshop
-  accessible to everybody.
-  The workshop organisers have checked that:
-</p>
-<ul>
-  <li>The room is wheelchair / scooter accessible.</li>
-  <li>Accessible restrooms are available.</li>
-</ul>
-<p>
-  Materials will be provided in advance of the workshop and
-  large-print handouts are available if needed by notifying the
-  organizers in advance. If we can help making learning easier for
-  you (e.g. sign-language interpreters, lactation facilities) please
-  get in touch and we will attempt to provide them.
-</p>
+<!--<p id="accessibility">-->
+  <!--<strong>Accessibility:</strong> We are committed to making this workshop-->
+  <!--accessible to everybody.-->
+  <!--The workshop organisers have checked that:-->
+<!--</p>-->
+<!--<ul>-->
+  <!--<li>The room is wheelchair / scooter accessible.</li>-->
+  <!--<li>Accessible restrooms are available.</li>-->
+<!--</ul>-->
+<!--<p>-->
+  <!--Materials will be provided in advance of the workshop and-->
+  <!--large-print handouts are available if needed by notifying the-->
+  <!--organizers in advance. If we can help making learning easier for-->
+  <!--you (e.g. sign-language interpreters, lactation facilities) please-->
+  <!--get in touch and we will attempt to provide them.-->
+<!--</p>-->
 
 <!--
   CONTACT EMAIL ADDRESS
@@ -226,12 +226,10 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
 <h2 id="schedule">Schedule</h2>
 
 <!-- DO NOT EDIT SURVEY LINKS -->
-<!--
 <p><em>Surveys</em></p>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
 <p><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop Survey</a></p>
 <p><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop Survey</a></p>
--->
 
 <div class="row">
   <div class="col-md-6">
