--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Day 1 Room B09, Sutton Bonington Campus</h3>
     <table class="table table-striped">
       <tr> <td>09:00 </td> <td>Coffee and set up</td> </tr>
       <tr> <td>09:15</td> <td>Introduction</td> </tr>
@@ -251,7 +251,7 @@ eventbrite: "5272863276"          # optional: alphanumeric key for Eventbrite re
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Day 2 - Room A28, Vet School Building</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
