--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humandate: "October 5-6, 2016"    # human-readable dates for the workshop (e.g.,
 humantime: "9:00 am - 5:00 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-10-05      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2016-10-06        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Raniere Silva", "Andrew Warry"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Aleksandra Nenadic", "Raniere Silva", "Andrew Warry"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["To be announced"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["a.nenadic@manchester.ac.uk", "richard.emes@nottingham.ac.uk"]      # contact email addresses for host, lead instructor, or whoever else is handling questions
 etherpad: "http://pad.software-carpentry.org/2016-10-05-nottingham"            # optional: URL for the workshop Etherpad if there is one
